# delphi-dll-prototype

./: .gitignore  README.md
TextEditor/: CppRun.pas  Projection.pas  TextEditor.dpr  TextEditor.dproj  TextEditor.res  TextEditorUnit.fmx  TextEditorUnit.pas
ex_dll/: CMakeLists.txt  README.md  api.cpp  build_dll.sh
